--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,16 @@
         .display-flex{
             display: flex;
         }
+        .btn-primary{
+          border-radius: 8px;
+          background: rgb(255, 144, 14);
+          width: 180px;
+          height: 64px;
+          border: none;
+          color:white;
+          font-size: 20px;
+          font-weight: 600;
+        }
 
   /* Header Style */
   .bg-light{
@@ -19,10 +29,13 @@
   /* Nav related Style */
   .nav-bar{
     justify-content: space-between;
+    align-items: center;
   }
 .brand-name{
    
-
+ font-weight: 700px;
+ font-size: 3rem;
+ 
 }
   .nav-item{
     list-style: none;
@@ -40,3 +53,26 @@ color:rgb(66, 66, 66);
     margin: 0 auto;
 
   }
+  /* Banner Related Style */
+  .banner-content{
+    width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .banner-title{
+    font-size: 4rem;
+    font-weight: 700;
+  }
+  .banner-image{
+    width: 100%;
+  }
+/* Responsive Style */
+@media screen and (max-width:576px) {
+  body{
+    background-color: red;
+  }
+  .nav-bar ,.nav-links{
+    flex-direction: column;
+  }
+}
